[package]
name = "asoiaf-api"
version = "0.1.1"
edition = "2021"
authors = ["Yago Iglesias Vazquez  <yago.iglesias.vazquez@gmail.com>"]
description = "Rust wrapper for the api of ice and fire."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Yag000/asoiaf-rs"
documentation = "https://docs.rs/asoiaf-api"
keywords = ["wrapper", "asoiaf", "api"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.3"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
